# brainzo

./: .gitignore  LICENSE  Makefile  README.md  brainzo.cabal  brainzo.consul.json  brainzo.nix  brainzo.org  brainzo.service  default.nix  happstack-server.nix  now-playing.sh  package.yaml  shell.nix  stack.yaml
app/: Main.hs
mobile/: Makefile  app.json  index.android.js  index.js  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/android/app/: BUCK  build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/assets/: index.android.bundle
mobile/android/app/src/main/java/com/brainzo/: MainActivity.java  MainApplication.java
mobile/android/app/src/main/java/com/eddsteel/brainzo/: MainActivity.java  MainApplication.java
mobile/android/app/src/main/res/values/: strings.xml
mobile/app/: BrainzoRemote.js
mobile/app/components/: CoolText.js  Key.js  Keyboard.js  Mouse.js  NowPlaying.js
mobile/app/util/: Brainzo.js  Receiver.js
mobile/ios/Brainzo/: AppDelegate.m  Info.plist
mobile/ios/Brainzo.xcodeproj/: project.pbxproj
mobile/ios/Brainzo.xcodeproj/xcshareddata/xcschemes/: Brainzo-tvOS.xcscheme  Brainzo.xcscheme
mobile/ios/Brainzo/Base.lproj/: LaunchScreen.xib
mobile/ios/BrainzoTests/: BrainzoTests.m
src/: Brainzo.hs
src/Brainzo/: Apps.hs  Commands.hs  Data.hs  File.hs  GoogleMaps.hs  Keys.hs  Notify.hs  Operation.hs  Paths.hs  Processes.hs  Radio.hs  Transmission.hs  Util.hs
src/Brainzo/Commands/: Audio.hs  Blinds.hs  GoogleMaps.hs  Keys.hs  MPRIS.hs  Mouse.hs  NowPlaying.hs  Radio.hs  Transmission.hs  Version.hs
src/Brainzo/DB/: BrainzoDB.hs  RadioDB.hs
src/Brainzo/Data/: Mouse.hs  NowPlaying.hs  Storage.hs
test/Brainzo/: GoogleMapsSpec.hs  RadioSpec.hs
test/Brainzo/Commands/: GoogleMapsSpec.hs  RadioSpec.hs
web/: Main.hs
