name:                brainzo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/eddsteel/brainzo#readme
license:             BSD3
license-file:        LICENSE
author:              Edward Steel
maintainer:          edd@eddsteel.com
copyright:           2015-2016 Edward Steel
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brainzo
  other-modules:       Brainzo.Apps
                     , Brainzo.Commands
                     , Brainzo.Commands.Radio
                     , Brainzo.Commands.GoogleMaps
                     , Brainzo.Commands.Keys
                     , Brainzo.Data
                     , Brainzo.Data.NowPlaying
                     , Brainzo.Data.Storage
                     , Brainzo.DB.BrainzoDB
                     , Brainzo.DB.RadioDB
                     , Brainzo.File
                     , Brainzo.Notify
                     , Brainzo.Transmission
                     , Brainzo.Util
  build-depends:       base
                     , MissingH
                     , containers
                     , dbus
                     , directory
                     , fdo-notify
                     , foldl
                     , process
                     , safe
                     , sqlite-simple
                     , strict
                     , system-filepath
                     , text
                     , time
                     , ConfigFile
                     , mtl
                     , fraction
                     , regex-applicative-text
  default-language:    Haskell2010

executable b
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainzo
                     , turtle
                     , text
  default-language:    Haskell2010

executable brainzo-api
  hs-source-dirs:      web
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainzo
                     , turtle
                     , text
                     , blaze-html
                     , happstack-lite
                     , happstack-server
                     , foldl
  default-language:    Haskell2010

test-suite brainzo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , brainzo
                     , text
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
                     , turtle
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddsteel/brainzo
