name:                brainzo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/brainzo#readme
license:             BSD3
license-file:        LICENSE
author:              Edward Steel
maintainer:          edd@eddsteel.com
copyright:           2015-2016 Edward Steel
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brainzo
                     , Brainzo.Radio
                     , Brainzo.GoogleMaps
                     , Brainzo.Data
                     , Brainzo.Keys
  build-depends:       base >= 4.7 && < 5
                     , process
                     , MissingH
                     , containers
                     , directory
                     , strict
                     , turtle == 1.2.8
                     , text
                     , system-filepath
  default-language:    Haskell2010

executable b
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainzo
                     , turtle == 1.2.8
                     , text
  default-language:    Haskell2010

test-suite brainzo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , brainzo
                     , text
                     , turtle == 1.2.8
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddsteel/brainzo
