name:                brainzo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/brainzo#readme
license:             BSD3
license-file:        LICENSE
author:              Edward Steel
maintainer:          edd@eddsteel.com
copyright:           2015-2016 Edward Steel
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brainzo
                     , Brainzo.Radio
                     , Brainzo.GoogleMaps
                     , Brainzo.Data
                     , Brainzo.Data.NowPlaying
                     , Brainzo.Data.Storage
                     , Brainzo.Keys
                     , Brainzo.File
  build-depends:       base >= 4.7 && < 5
                     , process
                     , MissingH
                     , containers
                     , directory
                     , strict
                     , turtle
                     , text
                     , system-filepath
                     , sqlite-simple
                     , time
                     , foldl
  default-language:    Haskell2010

executable b
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainzo
                     , turtle
                     , text
  default-language:    Haskell2010

test-suite brainzo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , brainzo
                     , text
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
                     , turtle
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eddsteel/brainzo
